--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,56 +8,43 @@ jobs:
   check_author_team_membership:
     runs-on: ubuntu-latest
     steps:
-      - name: Get teams
-        id: get_teams
-        uses: octokit/request-action@v2.x
-        with:
-          route: GET /orgs/:org/teams
-          org: ${{ github.event.organization.login }}
-          headers:
-            authorization: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Check if author is a member of opsTrack team
-        id: check_author_membership
+      - name: Get opsTrack team members
+        id: get_opsTrack_members
         run: |
-          const teams = ${{fromJson(steps.get_teams.outputs.data)}};
-          const opsTrackTeam = teams.find(team => team.slug === 'opsTrack');
-          const teamMembers = await github.rest.teams.listMembersInOrg({
-            org: context.payload.organization.login,
-            team_slug: opsTrackTeam.slug,
-            headers: {
-              authorization: `token ${{ secrets.GITHUB_TOKEN }}`
-            }
-          });
-          const author = context.payload.sender.login;
-          const isMember = teamMembers.some(member => member.login === author);
+          team_members=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+              "https://api.github.com/orgs/${{ github.event.organization.login }}/teams/opsTrack/members" | \
+              grep -oP '"login": "\K([^"]+)')
+          echo "::set-output name=opsTrackMembers::$team_members"
+        shell: bash
 
-          if (isMember) {
-            console.log('Author is a member of opsTrack team');
-            core.setOutput('opsTrackMember', 'true');
-          } else {
-            console.log('Author is not a member of opsTrack team');
-            core.setOutput('opsTrackMember', 'false');
-          }
+      - name: Check if author is opsTrack member
+        id: check_author
+        run: |
+          author_login=$(jq -r '.pull_request.user.login' $GITHUB_EVENT_PATH)
+          opsTrack_members=$(echo "${{ steps.get_opsTrack_members.outputs.opsTrackMembers }}" | tr '\n' ' ')
+          is_member=0
+          for member in $opsTrack_members; do
+            if [ "$member" == "$author_login" ]; then
+              is_member=1
+              break
+            fi
+          done
+          echo "::set-output name=isMember::$is_member"
 
   label_pr_needing_reviews:
     needs: check_author_team_membership
     runs-on: ubuntu-latest
     steps:
       - name: Check if opsTrack member
-        run: echo "Author is opsTrack member: ${{ needs.check_author_team_membership.outputs.opsTrackMember }}"
         id: opsTrack_member_check
+        run: echo "Author is opsTrack member: ${{ needs.check_author_team_membership.outputs.isMember }}"
 
       - name: Add label if opsTrack member
-        if: steps.opsTrack_member_check.outputs.opsTrackMember == 'true'
-        uses: actions/github-script@v5
-        with:
-          script: |
-            github.issues.addLabels({
-              owner: context.payload.repository.owner.login,
-              repo: context.payload.repository.name,
-              issue_number: context.payload.pull_request.number,
-              labels: ['codeowner reviews required']
-            });
-          script-output: |
-            { token: '${{ secrets.GITHUB_TOKEN }}' }
+        if: steps.opsTrack_member_check.outputs.isMember == '1'
+        run: |
+          echo "Author is a member of opsTrack team, adding label..."
+          curl -X POST \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.number }}/labels" \
+            -d '{"labels":["codeowner reviews required"]}'
